Refactor content card

--- a/src/layout/theme.liquid
+++ b/src/layout/theme.liquid
@@ -15,13 +15,14 @@
   {% include 'script-tags', layout: 'theme' %}
 
   {{ content_for_header }}
+
 </head>
 
 <body>
 
   {% section 'header' %}
 
-  <div class="mt-5 pt-2">
+  <div class="mt-5 pt-5 pt-md-4">
     {{ content_for_layout }}
   </div>
 
