--- a/src/sections/header.liquid
+++ b/src/sections/header.liquid
@@ -6,8 +6,8 @@
 
 {% endcomment %}
 
-<nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top ">
-  <a class="navbar-brand" href="/">{{ shop.name }}</a>
+<nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top border-bottom">
+  <a class="navbar-brand" href="/">King of Cards</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -15,10 +15,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
-        <a class="nav-link" href="/collections/burgers">Burgers</a>
+        <a class="nav-link" href="/products/king">King</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/collections/burgers/products/bacon-ultimate-cheeseburger™">Bacon Ultimate cheeseburger™</a>
+        <a class="nav-link" href="/collections/1885">1885 Collection</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="/cart">Cart</a>
@@ -26,21 +26,6 @@
       <li class="nav-item">
         <a class="nav-link" href="/checkout">Checkout</a>
       </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Dropdown
-        </a>
-        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href="#">Something else here</a>
-        </div>
-      </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
-    </form>
   </div>
 </nav>
