--- a/src/snippets/content-footer.liquid
+++ b/src/snippets/content-footer.liquid
@@ -4,28 +4,41 @@
   Content Footer
   -----------------------------------------------------------------------------
 
+  Liquid:
+  - Content Object - `snippets/content-object.liquid`
+  - Grid Item - `snippets/grid-item.liquid`
+
+  Styling:
+
+  - Bootstrap
+
+  JavaScript:
+
+  - None
+
 {% endcomment %}
 
 {% comment %} Defaults {% endcomment %}
 
-{% assign row_classes = 'row' %}
-
-{% assign container_classes = container %}
-
 {% comment %} Content {% endcomment %}
 {% capture content %}
-  {% render 'content-object'
-    content_color: content_color,
-    eyebrow_style: eyebrow_style,
-    eyebrow_text: eyebrow_text,
-    heading_style: heading_style,
-    heading_text: heading_text,
-    paragraph_text: paragraph_text,
-    link_text: link_text,
-    link_url: link_url,
-    link_style: link_style,
-    text_align: content_align,
-    text_align_lg: content_align_lg,
+  {% capture content_object %}
+    {% render 'content-object'
+      content_color: content_color,
+      eyebrow_style: eyebrow_style,
+      eyebrow_text: eyebrow_text,
+      heading_style: heading_style,
+      heading_text: heading_text,
+      paragraph_text: paragraph_text,
+      link_text: link_text,
+      link_url: link_url,
+      link_style: link_style,
+      content_align: content_align,
+      content_align_lg: content_align_lg %}
+  {% endcapture %}
+
+  {% render 'content-wrapper'
+    content: content_object,
     pt: pt,
     pb: pb,
     mt: mt,
@@ -50,9 +63,7 @@
 
 {% comment %} Render {% endcomment %}
 {% if grid_item != blank %}
-  <div class="{{ container_classes }}">
-    <div class="{{ row_classes }}">
-      {{ grid_item }}
-    </div>
-  </div>
+  {% render 'content-container'
+    container: container,
+    content: grid_item %}
 {% endif %}
