--- a/src/snippets/content-object.liquid
+++ b/src/snippets/content-object.liquid
@@ -5,212 +5,49 @@
   Content Object
   -----------------------------------------------------------------------------
 
+  Dependencies:
+
+  Liquid:
+
+  Elements:
+  - Eyebrow Element - `snippets/eyebrow-element.liquid`
+  - Heading Element - `snippets/heading-element`
+  - Paragraph Element - `snippets/paragraph-element`
+  - Link Element - `snippets/link-element`
+
+  Styling:
+
+  - Bootstrap
+
+  JavaScript:
+
+  - None
+
   Usage:
 
   {% render 'content-object',
-    id: { string } - required only if using background image
-    block_bg_image_url: { string } - optional
-    block_bg_image_url_lg: { string } - optional
-    text_align: { string } - optional
+    content: { string } - required
+    content_align: { string } - optional
+    content_align_lg: { string } - optional
     link_style: { string } - optional
     link_url: { string } - optional
-    link_text: { string } - optional
-    pt : { string } - optional
-    pr: { string } - optional
-    pb: { string } - optional
-    pl: { string } - optional
-    mt: { string } - optional
-    mr: { string } - optional
-    mb: { string } - optional
-    ml: { string } - optional
-    pt_md_up: { string } - optional
-    pr_md_up: { string } - optional
-    pb_md_up: { string } - optional
-    pl_md_up: { string } - optional
-    mt_md_up: { string } - optional
-    mr_md_up: { string } - optional
-    mb_md_up: { string } - optional
-    ml_md_up: { string } - optional %}
+    link_text: { string } - optional %}
 
 {% endcomment %}
 
-{% comment %} Defaults {% endcomment %}
-{% if pt != blank %}
-  {% assign pt = pt %}
+{% if content_align != blank %}
+  {% assign content_align = content_align %}
 {% else %}
-  {% assign pt = 0 %}
+  {% assign content_align = 'text-center' %}
 {% endif %}
 
-{% if pr != blank %}
-  {% assign pr = pr %}
+{% if content_align_lg != blank %}
+  {% assign content_align_lg = content_align_lg %}
 {% else %}
-  {% assign pr = 0 %}
+  {% assign content_align_lg = 'text-md-center' %}
 {% endif %}
 
-{% if pb != blank %}
-  {% assign pb = pb %}
-{% else %}
-  {% assign pb = 0 %}
-{% endif %}
-
-{% if pl != blank %}
-  {% assign pl = pl %}
-{% else %}
-  {% assign pl = 0 %}
-{% endif %}
-
-{% if mt != blank %}
-  {% assign mt = mt %}
-{% else %}
-  {% assign mt = 0 %}
-{% endif %}
-
-{% if mr != blank %}
-  {% assign mr = mr %}
-{% else %}
-  {% assign mr = 0 %}
-{% endif %}
-
-{% if mb != blank %}
-  {% assign mb = mb %}
-{% else %}
-  {% assign mb = 0 %}
-{% endif %}
-
-{% if ml != blank %}
-  {% assign ml = ml %}
-{% else %}
-  {% assign ml = 0 %}
-{% endif %}
-
-{% if pt_md_up != blank %}
-  {% assign pt_md_up = pt_md_up %}
-{% else %}
-  {% assign pt_md_up = 0 %}
-{% endif %}
-
-{% if pr_md_up != blank %}
-  {% assign pr_md_up = pr_md_up %}
-{% else %}
-  {% assign pr_md_up = 0 %}
-{% endif %}
-
-{% if pb_md_up != blank %}
-  {% assign pb_md_up = pb_md_up %}
-{% else %}
-  {% assign pb_md_up = 0 %}
-{% endif %}
-
-{% if pl_md_up != blank %}
-  {% assign pl_md_up = pl_md_up %}
-{% else %}
-  {% assign pl_md_up = 0 %}
-{% endif %}
-
-{% if mt_md_up != blank %}
-  {% assign mt_md_up = mt_md_up %}
-{% else %}
-  {% assign mt_md_up = 0 %}
-{% endif %}
-
-{% if mr_md_up != blank %}
-  {% assign mr_md_up = mr_md_up %}
-{% else %}
-  {% assign mr_md_up = 0 %}
-{% endif %}
-
-{% if mb_md_up != blank %}
-  {% assign mb_md_up = mb_md_up %}
-{% else %}
-  {% assign mb_md_up = 0 %}
-{% endif %}
-
-{% if ml_md_up != blank %}
-  {% assign ml_md_up = ml_md_up %}
-{% else %}
-  {% assign ml_md_up = 0 %}
-{% endif %}
-
-{% if text_align != blank %}
-  {% assign text_align = text_align %}
-{% else %}
-  {% assign text_align = 'text-center' %}
-{% endif %}
-
-{% if text_align_lg != blank %}
-  {% assign text_align_lg = text_align_lg %}
-{% else %}
-  {% assign text_align_lg = 'text-md-center' %}
-{% endif %}
-
-{% assign text_align_classes = text_align | append: ' ' | append: text_align_lg %}
-
-{% comment %} Object Classes {% endcomment %}
-{% assign el_classes = 'w-100' %}
-
-{% if pt != 0 %}
-  {% assign el_classes = el_classes | append: ' pt-' | append: pt %}
-{% endif %}
-
-{% if pr != 0 %}
-  {% assign el_classes = el_classes | append: ' pr-' | append: pr %}
-{% endif %}
-
-{% if pb != 0 %}
-  {% assign el_classes = el_classes | append: ' pb-' | append: pb %}
-{% endif %}
-
-{% if pl != 0 %}
-  {% assign el_classes = el_classes | append: ' pl-' | append: pl %}
-{% endif %}
-
-{% if mt != 0 %}
-  {% assign el_classes = el_classes | append: ' mt-' | append: mt %}
-{% endif %}
-
-{% if mr != 0 %}
-  {% assign el_classes = el_classes | append: ' mr-' | append: mr %}
-{% endif %}
-
-{% if mb != 0 %}
-  {% assign el_classes = el_classes | append: ' mb-' | append: mb %}
-{% endif %}
-
-{% if ml != 0 %}
-  {% assign el_classes = el_classes | append: ' ml-' | append: ml %}
-{% endif %}
-
-{% if pt_md_up != 0 %}
-  {% assign el_classes = el_classes | append: ' pt-md-' | append: pt_md_up %}
-{% endif %}
-
-{% if pr_md_up != 0 %}
-  {% assign el_classes = el_classes | append: ' pr-md-' | append: pr_md_up %}
-{% endif %}
-
-{% if pb_md_up != 0 %}
-  {% assign el_classes = el_classes | append: ' pb-md-' | append: pb_md_up %}
-{% endif %}
-
-{% if pl_md_up != 0 %}
-  {% assign el_classes = el_classes | append: ' pl-md-' | append: pl_md_up %}
-{% endif %}
-
-{% if mt_md_up != 0 %}
-  {% assign el_classes = el_classes | append: ' mt-md-' | append: mt_md_up %}
-{% endif %}
-
-{% if mr_md_up != 0 %}
-  {% assign el_classes = el_classes | append: ' mr-md-' | append: mr_md_up %}
-{% endif %}
-
-{% if mb_md_up != 0 %}
-  {% assign el_classes = el_classes | append: ' mb-md-' | append: mb_md_up %}
-{% endif %}
-
-{% if ml_md_up != 0 %}
-  {% assign el_classes = el_classes | append: ' ml-md-' | append: ml_md_up %}
-{% endif %}
+{% assign content_align_classes = content_align | append: ' ' | append: content_align_lg %}
 
 {% comment %} Render {% endcomment %}
 {% if link_text != blank %}
@@ -226,31 +63,26 @@
 {% endif %}
 
 {% if render_content == true %}
-  <div {%if el_classes %}class="{{ el_classes }}"{% endif %}>
-    {% render 'eyebrow-element',
-      text: eyebrow_text,
-      text_align: text_align_classes,
-      eyebrow_style: eyebrow_style %}
+  {% render 'eyebrow-element',
+    text: eyebrow_text,
+    text_align: content_align_classes,
+    eyebrow_style: eyebrow_style %}
 
-    {% render 'heading-element',
-      text: heading_text,
-      text_color: content_color,
-      text_align: text_align_classes,
-      display_size: heading_style %}
+  {% render 'heading-element',
+    text: heading_text,
+    text_color: content_color,
+    text_align: content_align_classes,
+    heading_style: heading_style %}
 
-    {% render 'paragraph-element',
-      text: paragraph_text,
-      text_color: content_color,
-      text_align: text_align_classes %}
+  {% render 'paragraph-element',
+    text: paragraph_text,
+    text_color: content_color,
+    text_align: content_align_classes %}
 
-    {% render 'link-element',
-      text_align: text_align_classes,
-      link_text: link_text,
-      link_url: link_url,
-      link_style: link_style %}
-
-  {% if el_classes != blank %}
-    </div>
-  {% endif %}
+  {% render 'link-element',
+    text_align: content_align_classes,
+    link_text: link_text,
+    link_url: link_url,
+    link_style: link_style %}
 {% endif %}
 
