--- a/src/snippets/embed-object.liquid
+++ b/src/snippets/embed-object.liquid
@@ -8,6 +8,10 @@
 
   {% render 'embed-object',
     aspect_ratio: { string } - optional - utility class
+    fill_container: { boolean } - optional - Fills the grid item to 100% of
+    the height and 100% width of the row contents. Still requires an aspect 
+    ratio as a fallback to ensure the element always maintains a minimum
+    height.
     align_items: { string } - optional - utility class
     bg_color: { string } - optional - utility class
     content: { string } - optional %}
@@ -46,6 +50,11 @@
 
 {% assign embed_wrapper_classes = 'embed-responsive' %}
 
+{% if fill_container %}
+  {% assign embed_wrapper_classes = embed_wrapper_classes
+    | append: ' h-100 w-100' %}
+{% endif %}
+
 {% if aspect_ratio != blank %}
   {% assign embed_wrapper_classes = embed_wrapper_classes
     | append: ' embed-responsive-'
@@ -58,12 +67,6 @@
 
 {% comment %} Embeded Responsive Item Classes {% endcomment %}
 {% assign embed_responsive_item_classes = 'embed-responsive-item' %}
-
-{% if bg_color != blank %}
-  {% assign embed_responsive_item_classes = embed_responsive_item_classes
-    | append: ' '
-    | append: bg_color %}
-{% endif %}
 
 {% assign embed_responsive_item_classes = embed_responsive_item_classes
   | append: ' '
@@ -85,43 +88,14 @@
       class="{{ embed_responsive_item_classes }}"
       {% if id != blank %}id="embed-object-{{ id }}{% endif %}">
       {% comment %} Background Image {% endcomment %}
-      {% unless bg_image_url contains 'no-image' %}
-        {% if bg_image_url != blank %}
-          {% assign bg_image_url = bg_image_url %}
-        {% elsif bg_image_url_lg != blank %}
-          {% assign bg_image_url = bg_image_url_lg %}
-        {% endif %}
-        <style>
-          #embed-object-{{ id }} {
-            background-image: url({{ bg_image_url }});
-            background-size: cover;
-          }
-        </style>
-      {% endunless %}
 
-      {% unless bg_image_url_lg contains 'no-image' %}
-        {% if bg_image_url_lg != blank %}
-          {% assign bg_image_url_lg = bg_image_url_lg %}
-        {% elsif bg_image_url != blank %}
-          {% assign bg_image_url_lg = bg_image_url %}
-        {% endif %}
-        <style>
-          @media (min-width: 992px) {
-            #embed-object-{{ id }} {
-              background-image: url({{ bg_image_url_lg }});
-              background-size: cover;
-            }
-          }
-        </style>
-      {% endunless %}
-      {% assign bg_color_computed = bg_color  | remove: '#'%}
-      {% assign bg_color_computed = bg_color_computed | append: bg_color_alpha %}
-      {% assign bg_color_computed = bg_color_computed | prepend: '#' %}
-      <div
-        class="position-absolute h-100 w-100"
-        style="background-color: {{ bg_color_computed }};"></div>
+      {% render 'image-object',
+        image_url:bg_image_url,
+        image_url_lg:bg_image_url_lg,
+        image_alt_text: 'alt',
+        aspect_ratio: '1by1' %}
 
-      <div class="position-relative w-100" style="z-index: 900;">
+      <div class="position-relative w-100">
         {{ content }}
       </div>
     </div>
