--- a/src/snippets/product-card.liquid
+++ b/src/snippets/product-card.liquid
@@ -28,7 +28,7 @@
   </div>
   <div class="d-flex flex-column flex-md-row justify-content-between">
     <a href="{{ url | within: collection }}">
-      <p class="mb-0 text-body">{{ title }}</p>
+      <h3 class="h6 mb-0 text-body">{{ title }}</h3>
       {% if excerpt != blank %}
         <p class="small text-body">{{ excerpt }}</p>
       {% endif %}
