--- a/src/snippets/content-header.liquid
+++ b/src/snippets/content-header.liquid
@@ -53,6 +53,8 @@
 
   {% render 'content-wrapper'
     content: content_object,
+    bg_color: bg_color,
+    bg_color_alpha: bg_color_alpha,
     pt: pt,
     pb: pb,
     mt: mt,
